--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,9 @@ font-size: 38px;
 
 .tab-content{
     margin-left: 20%;
+    width: 100%;
+    margin-right: 10%;
+}
+label{
+    font-weight: 500;
 }
